# Simple-contracts-for-Plasma

./: README.md
Auth Stablecoins and Smart-contracts/: README.md
Create simple token/: README.md  ion.token.cpp  ion.token.hpp
escrow/: readme.md
escrow/escrowuser/: CMakeLists.txt  big_asset.hpp  escrowuser.cpp  escrowuser.hpp  string_format.hpp  string_utils.hpp
helloworld/: CMakeLists.txt  hello.cpp  hello.hpp
oracle/: currencies-contract.js  plasma.network.config.js
simple token/: CMakeLists.txt  token.cpp  token.hpp
